--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- Header / Hero Section -->
   <header style="text-align: center; padding: 60px 20px; background: #f4f4f4;">
     <h1>Welcome to My Portfolio</h1>
-    <p>I'm Prajwol — aspiring Neuroscientist /   / creator</p>
+    <p>I'm Prajwol — aspiring MD /PhD Candidate  /</p>
   </header>
 
   <!-- Projects Section -->
@@ -12,7 +12,7 @@
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
 
-      <!-- Project 1 -->
+      <!-- My Project at VIN -->
       <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
         <img src="https://via.placeholder.com/600x400.png?text=Project+1" alt="Project 1" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <!-- Project 2 (add as many as you want) -->
+      <!-- Research at Seminary Manor -->
       <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
         <img src="https://via.placeholder.com/600x400.png?text=Project+2" alt="Project 2" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
