--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- Header / Hero Section -->
   <header style="text-align: center; padding: 60px 20px; background: #f4f4f4;">
     <h1>Welcome to My Portfolio</h1>
-    <p>I'm Prajwol — aspiring MD /PhD Candidate  /</p>
+    <p>I'm Prajwol — aspiring MD /PhD Candidate</p>
   </header>
 
   <!-- Projects Section -->
