--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <!-- My Project at VIN -->
       <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-        <img src="https://via.placeholder.com/600x400.png?text=Project+1" alt="Project 1" style="width: 100%; height: 220px; object-fit: cover;">
+        <img src="https://via.placeholder.com/600x400.png?text=Project+1" alt="My Project at VIN" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
           <h3>File Sharing Website</h3>
           <p>A simple web app for uploading and sharing files securely with friends.</p>
@@ -24,7 +24,7 @@
 
       <!-- Research at Seminary Manor -->
       <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-        <img src="https://via.placeholder.com/600x400.png?text=Project+2" alt="Project 2" style="width: 100%; height: 220px; object-fit: cover;">
+        <img src="https://via.placeholder.com/600x400.png?text=Project+2" alt="Research at Seminary Manor" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
           <h3>Personal Blog</h3>
           <p>A clean blog built with HTML & CSS to share my thoughts.</p>
@@ -39,6 +39,6 @@
 
   <!-- Footer (optional) -->
   <footer style="text-align: center; padding: 40px; background: #222; color: white;">
-    <p>© 2025 Prajwol — Get in touch: your.email@example.com</p>
+    <p>© 2025 Prajwol — Get in touch: ppoudel@knox.edu</p>
   </footer>
 </body>
