--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
         </div>
       </div>
 
-      <!-- Add more projects here... -->
+      <!-- Microscopy at Knox... -->
+       <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+        <img src="https://via.placeholder.com/600x400.png?text=Project+2" alt="Microscopy at Knox" style="width: 100%; height: 220px; object-fit: cover;">
+        <div style="padding: 20px;">
+          <h3>Personal Blog</h3>
+          <p>A clean blog built with HTML & CSS to share my thoughts.</p>
+          <a href="#" style="display: inline-block; padding: 10px 20px; background: #0077ff; color: white; text-decoration: none; border-radius: 6px;">View Project →</a>
+        </div><h3>Research Photos</h3>
+<img src="conference-photo1.jpg" alt="Effect of PP2 Protein with ITSN targeting SH3 Domain" style="max-width: 600px; margin: 10px;">
+<img src="lab-photo2.png" alt="Lab Photo" style="max-width: 600px; margin: 10px;">
+      </div>
+
 
     </div>
   </section>
