--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="https://via.placeholder.com/600x400.png?text=Project+1" alt="My Project at VIN" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
           <h3>File Sharing Website</h3>
-          <p>A simple web app for uploading and sharing files securely with friends.</p>
+          <p> 15 weeks long program in Nepal where I volunteered with around 10 different international volunteers across multiple countries on projects like "Survery on effect of climate change on agriculture","Empowering rural areas women", "Re-constrcution of Librray on government school" and many more.  .</p>
           <a href="https://your-live-link-here.com" target="_blank" style="display: inline-block; padding: 10px 20px; background: #0077ff; color: white; text-decoration: none; border-radius: 6px;">View Project →</a>
         </div>
       </div>
@@ -27,8 +27,7 @@
         <img src="https://via.placeholder.com/600x400.png?text=Project+2" alt="Research at Seminary Manor" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
           <h3>Personal Blog</h3>
-          <p>A clean blog built with HTML & CSS to share my thoughts.</p>
-          <a href="#" style="display: inline-block; padding: 10px 20px; background: #0077ff; color: white; text-decoration: none; border-radius: 6px;">View Project →</a>
+          <p> 6 months long research on Nursing home at Galesburg where I was trying to figure out wheather the "Effect of Fall/Injury on Cognitive ability of dementia patients" <a href="#" style="display: inline-block; padding: 10px 20px; background: #0077ff; color: white; text-decoration: none; border-radius: 6px;">View Project →</a>
         </div>
       </div>
 
@@ -37,7 +36,7 @@
         <img src="https://via.placeholder.com/600x400.png?text=Project+2" alt="Microscopy at Knox" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
           <h3>Personal Blog</h3>
-          <p>A clean blog built with HTML & CSS to share my thoughts.</p>
+          <p>A 10 week of research where we learned about Stentor Coeruleus and effect of various antobodies on it which was imaged using confocal microscope. .</p>
           <a href="#" style="display: inline-block; padding: 10px 20px; background: #0077ff; color: white; text-decoration: none; border-radius: 6px;">View Project →</a>
         </div><h3>Research Photos</h3>
 <img src="conference-photo1.jpg" alt="Effect of PP2 Protein with ITSN targeting SH3 Domain" style="max-width: 600px; margin: 10px;">
