--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
           <p>A 10 week of research where we learned about Stentor Coeruleus and effect of various antobodies on it which was imaged using confocal microscope. .</p>
           <a href="#" style="display: inline-block; padding: 10px 20px; background: #0077ff; color: white; text-decoration: none; border-radius: 6px;">View Project →</a>
         </div><h3>Research Photos</h3>
-<img src="conference-photo1.jpg" alt="Effect of PP2 Protein with ITSN targeting SH3 Domain" style="max-width: 600px; margin: 10px;">
-<img src="lab-photo2.png" alt="Lab Photo" style="max-width: 600px; margin: 10px;">
+          <h3>My Research Poster</h3>
+<p>Effect of PP2 Protein with ITSN targeting SH3 Domain in Stentor (Knox College)</p>
+<img src="Effect%20of%20PP2%20Protein%20with%20ITSN%20targeting%20SH3%20Domain%20in%20Stentor%20Prajwol%20Poudel%20and%20Mark%20Slabodnick%20Knox%20College,%20Galesburg,%20IL,%20USA.jpg" alt="PP2 Protein Research Poster" style="max-width: 100%; height: auto; display: block; margin: 20px auto; border: 2px solid #0077ff; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+
       </div>
 
 
