--- a/index.html
+++ b/index.html
@@ -1,57 +1,45 @@
 
 <body>
-  <!-- Hero Section: Your Photo + Intro (visible immediately) -->
-  <header style="text-align: center; padding: 80px 20px; background: linear-gradient(to bottom, #e0f7fa, #ffffff);">
-    <img src="my-photo.jpg" alt="Prajwol Poudel" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover; border: 5px solid #0077ff; box-shadow: 0 4px 15px rgba(0,0,0,0.2); margin-bottom: 20px;">
-    <h1>Prajwol Poudel</h1>
-    <p style="font-size: 1.4em; max-width: 600px; margin: 0 auto;">Aspiring MD/PhD Candidate • Neuroscience & Biology Researcher • Passionate about dementia, microscopy, and global health volunteering</p>
-    <p style="margin-top: 20px;"><a href="mailto:ppoudel@knox.edu" style="color: #0077ff; text-decoration: none;">ppoudel@knox.edu</a></p>
+  <!-- Hero: Photo + Minimal Intro -->
+  <header style="text-align: center; padding: 80px 20px; background: #f8f9fa;">
+    <img src="IMG_1657.jpeg" alt="Prajwol Poudel" style="width: 220px; height: 220px; border-radius: 50%; object-fit: cover; border: 4px solid #0077ff; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+    <h1 style="margin-top: 20px;">Prajwol Poudel</h1>
+    <p style="font-size: 1.5em; color: #333;">Aspiring MD/PhD Candidate</p>
   </header>
 
-  <!-- My Work Section: Clickable cards (teasers only) -->
+  <!-- My Work Section -->
   <section style="padding: 60px 20px; max-width: 1200px; margin: 0 auto;">
-    <h2 style="text-align: center; margin-bottom: 50px; font-size: 2.5em;">My Experiences</h2>
+    <h2 style="text-align: center; margin-bottom: 50px;">My Work</h2>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
 
-      <!-- Volunteering Card -->
-      <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-        <img src="https://www.volunteerhq.org/images/projects/nepal/volunteer-abroad-in-nepal-ivhq-sustainable-agriculture.jpg" alt="Volunteering in Nepal" style="width: 100%; height: 220px; object-fit: cover;">
+      <!-- Volunteering -->
+      <div style="background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); overflow: hidden;">
+        <img src="https://ivhq.imgix.net/images/projects/nepal/volunteer-abroad-in-nepal-ivhq-sustainable-agriculture.jpg?auto=format,compress" alt="Volunteering in Nepal" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
-          <h3>Volunteering in Nepal (VIN)</h3>
+          <h3>Volunteering in Nepal</h3>
           <p>15-week program with international volunteers on climate change surveys, women's empowerment, school library reconstruction, and more.</p>
-          <details style="margin-top: 10px;">
-            <summary style="cursor: pointer; color: #0077ff; font-weight: bold;">View Details →</summary>
-            <p style="margin-top: 10px;">[Add more details or photos here if you want]</p>
-          </details>
         </div>
       </div>
 
-      <!-- Research Intern Card -->
-      <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+      <!-- Research Intern -->
+      <div style="background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); overflow: hidden;">
         <img src="https://www.hrw.org/sites/default/files/styles/16x9_large/public/multimedia_images_2018/201802us_nursinghomes_main.jpg?itok=Te7q9SFm" alt="Nursing Home Research" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
-          <h3>Research Intern • Seminary Manor</h3>
+          <h3>Research Intern</h3>
           <p>6-month study on the effect of falls/injuries on cognitive ability in dementia patients.</p>
-          <details style="margin-top: 10px;">
-            <summary style="cursor: pointer; color: #0077ff; font-weight: bold;">View Details →</summary>
-            <p style="margin-top: 10px;">[Add more details here]</p>
-          </details>
         </div>
       </div>
 
-      <!-- Microscopy Research Card -->
-      <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-        <img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=10216532990512291" alt="Stentor Coeruleus Microscopy" style="width: 100%; height: 220px; object-fit: cover;">
+      <!-- Research at Knox -->
+      <div style="background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); overflow: hidden;">
+        <img src="https://www.canadiannaturephotographer.com/Stentor/DSC_0210.jpg" alt="Stentor coeruleus" style="width: 100%; height: 220px; object-fit: cover;">
         <div style="padding: 20px;">
           <h3>Research • Knox College</h3>
-          <p>10-week study on Stentor coeruleus and effects of antibodies, imaged with confocal microscopy.</p>
-          <details style="margin-top: 10px;">
-            <summary style="cursor: pointer; color: #0077ff; font-weight: bold;">View Full Poster & Photos →</summary>
-            <div style="margin-top: 15px; text-align: center;">
-              <p><strong>PP2 Protein Research Poster</strong></p>
-              <img src="Effect%20of%20PP2%20Protein%20with%20ITSN%20targeting%20SH3%20Domain%20in%20Stentor%20Prajwol%20Poudel%20and%20Mark%20Slabodnick%20Knox%20College,%20Galesburg,%20IL,%20USA.jpg" alt="Full Research Poster" style="max-width: 100%; height: auto; border: 2px solid #0077ff; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
-              <p style="margin-top: 20px;">Additional confocal images:</p>
-              <img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=4230161500329151" alt="Stentor Microscopy" style="max-width: 100%; height: auto; margin: 10px 0;">
+          <p>10-week study on Stentor coeruleus and effects of antibodies using confocal microscopy.</p>
+          <details style="margin-top: 15px;">
+            <summary style="cursor: pointer; color: #0077ff; font-weight: bold;">View Full Poster →</summary>
+            <div style="margin-top: 20px; text-align: center;">
+              <img src="Effect%20of%20PP2%20Protein%20with%20ITSN%20targeting%20SH3%20Domain%20in%20Stentor%20Prajwol%20Poudel%20and%20Mark%20Slabodnick%20Knox%20College,%20Galesburg,%20IL,%20USA.jpg" alt="Research Poster" style="max-width: 100%; height: auto; border: 2px solid #0077ff; border-radius: 8px;">
             </div>
           </details>
         </div>
@@ -59,15 +47,6 @@
 
     </div>
   </section>
-
-  <!-- Footer -->
-  <footer style="text-align: center; padding: 40px; background: #222; color: white;">
-    <p>© 2025 Prajwol Poudel • ppoudel@knox.edu</p>
-  </footer>
-</body>
-
-
-
 
     </div>
   </section>
