--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
               
               <h4 style="margin-top: 30px; text-align: center;">Photo Gallery</h4>
               <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-top: 15px;">
-                <img src="Image 1.jpeg" alt="Volunteering Photo 1" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 2.jpeg" alt="Volunteering Photo 2" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 3.jpeg" alt="Volunteering Photo 3" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 4.jpeg" alt="Volunteering Photo 4" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 5.jpeg" alt="Volunteering Photo 5" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 6.jpeg" alt="Volunteering Photo 6" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 7.jpeg" alt="Volunteering Photo 7" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="Image 8.jpeg" alt="Volunteering Photo 8" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                <h4 style="margin-top: 30px; text-align: center;">Photo Gallery</h4>
+<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-top: 15px;">
+  <img src="Image 1.jpg" alt="Volunteering Photo 1" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 2.jpg" alt="Volunteering Photo 2" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 3.jpg" alt="Volunteering Photo 3" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 4.jpg" alt="Volunteering Photo 4" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 5.jpg" alt="Volunteering Photo 5" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 6.jpg" alt="Volunteering Photo 6" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 7.jpg" alt="Volunteering Photo 7" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <img src="Image 8.jpg" alt="Volunteering Photo 8" style="width: 100%; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+</div>
               </div>
             </div>
           </details>
